<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
     >
    
  
    <TextView 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:text="意见反馈"/>
    
     <View
            android:layout_width="fill_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider" />
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="5dp" >

	    <TextView 
	    	android:id="@+id/btn_checkSuggestion"
	    	android:layout_width="match_parent"
    		android:layout_height="match_parent"
    		android:text="@string/checkSuggestion"
    		android:background="@drawable/set_up_main_selector"
    		android:padding="10dp"
        	android:gravity="left"
        	android:textSize="20dp"
        	android:layout_weight="1"
    		/>
	    <View
            android:layout_width="fill_parent"
            android:layout_marginLeft="10dp"
            android:layout_height="1.5dp"
            android:background="?android:attr/listDivider" />
		<TextView 
	   		android:id="@+id/btn_addSuggestion"
	   	 	android:layout_width="match_parent"
    		android:layout_height="match_parent"
    		android:text="@string/addSuggestion"
    		android:background="@drawable/set_up_main_selector"
    		android:padding="10dp"
        	android:gravity="left"
        	android:textSize="20dp"
        	android:layout_weight="1"
    		/>
	</LinearLayout>
            
	<TextView 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:text="自定义问候语"/>
	
	<View
            android:layout_width="fill_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider" />
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="5dp" >

	    <TextView 
	    	android:id="@+id/btn_lookupGreeting"
	    	android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/Greeting"
    		android:background="@drawable/set_up_main_selector"
    		android:padding="10dp"
        	android:gravity="left"
        	android:textSize="20dp"
    	/>
	</LinearLayout>
    
	<TextView 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:text="系统信息"/>

	<View
            android:layout_width="fill_parent"
            android:layout_height="3dp"
            android:background="?android:attr/listDivider" />
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="52dp"
	    android:orientation="vertical"
	    android:padding="5dp" >

	    <TextView 
	    	android:id="@+id/btn_myInfo"
	    	android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:text="@string/myInfo"
    		android:background="@drawable/set_up_main_selector"
    		android:padding="10dp"
        	android:gravity="left"
        	android:textSize="20dp"
    	/>
	</LinearLayout>
    
    
</LinearLayout>
